fix: fix admin settings bug navbar, add /api/isadmin route, update docs
